# usbwall

./: .gitignore  CMakeLists.txt
cmake/Modules/: FindCheck.cmake
debian/: README.Debian  README.source  changelog  control  copyright  devid-schema.examples  devid-schema.install  gbp.conf  libpam-devid.install  libpam-usbwall.install  rules  usbwall-daemon.default  usbwall-daemon.init  usbwall-daemon.service  usbwall-deviddctl.install  usbwalld.8  usbwalld.init  usbwalld.install  usbwalld.manpages  watch
debian/lib/: release.py
debian/patches/: changelog.patch  series  spelling.patch
src/: CMakeLists.txt
src/daemon/: devuser.c  ldap_config.c  main.c
src/pam/: pam_usbwall.c
tests/: CMakeLists.txt
